Login, Google Login, Facebook Login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
             android:layout_marginRight="20dp">
 
         <EditText
+            android:id="@+id/email_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email">
@@ -41,6 +42,8 @@
             android:layout_marginRight="20dp">
 
         <EditText
+            android:inputType="textPassword"
+            android:id="@+id/password_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password">
@@ -49,6 +52,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/email_login_button"
             android:text="@string/signin_email"
             android:theme="@style/ButtonStyle"
             android:layout_width="match_parent"
@@ -59,6 +63,7 @@
             android:layout_marginBottom="35dp">
         </Button>
         <Button
+            android:id="@+id/facebook_login_button"
             android:text="@string/signin_facebook"
             android:textColor="@color/colorWhite"
             android:background="@drawable/btn_signin_facebook"
@@ -70,6 +75,7 @@
             android:layout_marginBottom="5dp">
         </Button>
         <Button
+            android:id="@+id/google_sign_in_button"
             android:text="@string/signin_google"
             android:textColor="@color/colorWhite"
             android:background="@drawable/btn_signin_google"
